guess CA template added with updated links

--- a/Guess/CartAbandon/2/test.html
+++ b/Guess/CartAbandon/2/test.html
@@ -9,9 +9,6 @@
     display:none;
     display:none!important;
   }
-  .JohnsonBox {
-    display: none!important;
-  }
   .ioslink999 a {
     text-decoration: underline;
     color: #999999;
@@ -20,48 +17,37 @@
     text-decoration: none;
     color: #333333;
   }
-  a img
-  {
-    border: 0 none;
-  }
   @media only screen and (max-width: 600px){
     .preheader {
-      font-size: 1.1vw !important;
+      font-size: 1.5vw !important;
     }
     .fss {
       font-size: 2.3vw !important;
     }
     .buttons {
-      font-size: 3.8vw !important;
+      font-size: 3.3vw !important;
     }
     .corporate {
-      font-size: 3vw !important;
+      font-size: 2.5vw !important;
     }
   }
-    @media only screen and (max-width: 380px){
+    @media only screen and (max-width: 321px){
     .preheader {
-      font-size: 1.2vw !important;
+      font-size: 1.5vw !important;
     }
     .fss {
-      font-size: 3.2vw !important;
+      font-size: 3.6vw !important;
     }
     .buttons {
       font-size: 4.7vw !important;
     }
     .corporate {
-      font-size: 3.4vw !important;
-    }
-  }
-  @media only screen and (max-width: 341px){
-    .logo {
-      font-size: 7vw !important;
+      font-size: 2.5vw !important;
     }
   }
  </style>
   </head>
-  <body style="max-width: 582px; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
-    <span class="JohnsonBox" style="display: none!important;">Add this email to your favorites to get exclusive offers!!!
-    </span>
+  <body style="max-width: 582px; border: 1px solid red; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%;">
     <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -85,12 +71,12 @@
                   <td class="preheader" style="font-family: Arial, sans-serif; color: #666666; font-size: 9px; font-weight: 600; line-height: 12px; letter-spacing: .01em;">
                     To keep seeing us in your inbox, add
                       <a href="mailto:noreply@admarketing.guess.ca" style="color: #333333;">
-                        noreply@admarketing.guessfactory.com
+                        noreply@admarketing.guess.ca
                       </a>
                      to your address book.
                   </td>
                   <td>
-                    <a class='preheader' href="<%@ include view='MirrorPageUrl' %>" _label="Mirror Page" _type="mirrorPage" style="color: #333333; float: left; text-align: right; font-family: Arial, sans-serif; font-weight: 600; font-size: 9px; line-height: 12px; letter-spacing: .01em;">
+                    <a class='preheader' href="<%@ include view='MirrorPageUrl' %>" _label="Mirror Page" _type="mirrorPage" style="color: #333333; text-align: right; font-family: Arial, sans-serif; font-weight: 600; font-size: 9px; line-height: 12px; letter-spacing: .01em;">
                       View in Browser
                     </a>
                   </td>
@@ -106,9 +92,9 @@
                     <table style="width: 100%">
                       <tbody>
                         <tr>
-                          <td style="text-align: center; padding-top: 16px; padding-bottom: 16px;">
-                            <a class="logo" href="https://www.guessfactory.com/en" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
-                              GUESS FACTORY
+                          <td>
+                            <a href="http://www.guess.ca/en/">
+                              <img src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/GUESS-Email-bold.png" width="100%">
                             </a>
                           </td>
                         </tr>
@@ -118,9 +104,9 @@
                     <table style="width: 100%; border-top-style: solid; border-top-color: #666666; border-top-width: 1px; border-bottom-color: #666666; border-bottom-style: solid; border-bottom-width: 1px;">
                       <tbody>
                         <tr>
-                          <td style="padding-top: 8px; padding-bottom: 8px; text-align: center;">
-                            <a class= "fss" href="https://www.guessfactory.com/en" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
-                              <strong>FREE SHIPPING*</strong> ON ORDERS $XXX+
+                          <td style="height: 57px; text-align: center;">
+                            <a class= "fss" href="http://www.guess.ca/en/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
+                              FREE SHIPPING* ON ORDERS $99+
                             </a>
                           </td>
                         </tr>
@@ -141,8 +127,8 @@
                     <table style="width: 100%; border-top-style: solid; border-top-color: #000000; border-top-width: 2px;">
                       <tbody>
                         <tr>
-                          <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.com/en/Catalog/Browse/new-arrivals/women/?rd=0" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                          <td style="height: 74px; text-align: center;">
+                            <a class="buttons" href="http://www.guess.ca/en/Catalog/Browse/women/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em;">
                               NEW ARRIVALS
                             </a>
                           </td>
@@ -153,8 +139,8 @@
                     <table style="width: 100%; border-top-style: solid; border-top-color: #eeeeee; border-top-width: 2px;">
                       <tbody>
                         <tr>
-                          <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.com/en/catalog/browse/sale/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                          <td style=" height: 80px; text-align: center;">
+                            <a class="buttons" href="http://www.guess.ca/en/Catalog/Browse/?f_on_sale=Y" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em;">
                               SALE
                             </a>
                           </td>
@@ -165,8 +151,8 @@
                     <table style="width: 100%; border-top-style: solid; border-top-color: #eeeeee; border-top-width: 2px;">
                       <tbody>
                         <tr>
-                          <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.com/en/StoreLocator/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                          <td style=" height: 80px; text-align: center;">
+                            <a class="buttons" href="http://www.guess.ca/en/StoreLocator/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em;">
                               FIND A STORE
                             </a>
                           </td>
@@ -177,8 +163,8 @@
                     <table style="width: 100%; background-color: #000000">
                       <tbody>
                         <tr>
-                          <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.com/en/Account/RegisterLoyalty?" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                          <td style=" height: 80px; text-align: center;">
+                            <a class="buttons" href="https://www.guess.ca/en/Account/Register?IsLoyalty=True" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -186,11 +172,11 @@
                       </tbody>
                     </table>
 <! ----- #Loveguess hashtag ----- !>
-                    <table style="width: 100%; background-color: #000000; border-top-style: solid; border-top-color: #999999; border-top-width: 1px;">
+                    <table style="width: 100%; background-color: #000000; border-top-style: solid; border-top-color: #ffffff; border-top-width: 1px;">
                       <tbody>
                         <tr>
-                          <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guessfactory.com/en" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
+                          <td style=" height: 80px; text-align: center;">
+                            <a class="buttons" href="https://shop.guess.ca/en/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
                               #LOVEGUESS
                             </a>
                           </td>
@@ -235,17 +221,22 @@
                       </tbody>
                     </table>
 <! ----- Privacy Policy | APP | Contact ----- !>
-                    <table style="width: 100%; background-color: #000000; border-top-style: solid; border-top-color: #999999; border-top-width: 1px;">
+                    <table style="width: 100%; background-color: #000000; border-top-style: solid; border-top-color: #ffffff; border-top-width: 1px;">
                       <tbody>
                         <tr>
-                          <td style="width:50%; color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: right; padding-right:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" href="https://www.guessfactory.com/en/customercare/privacytechsupport/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
-                              PRIVACY POLICY
+                          <td style=" height: 80px; width: 33%; text-align: center;">
+                            <a class="corporate" href="http://www.guess.ca/en/TermsAndConditions/" style="color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; display: block; font-size: 13px; letter-spacing: .36em; line-height: 12px;">
+                              CONTACT
                             </a>
                           </td>
-                          <td style="width:50%; font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: left; padding-left:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" href="service@guessfactory.com" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
-                              CONTACT US
+                          <td style=" height: 80px; width: 33%; text-align: center;">
+                            <a class="corporate" href="" style="color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; display: block; font-size: 13px; letter-spacing: .36em; line-height: 12px;">
+                              GET THE APP
+                            </a>
+                          </td>
+                          <td style=" height: 80px; width: 33%; text-align: center;">
+                            <a class="corporate" href="http://www.guess.ca/en/privacypolicy/" style="color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; display: block; font-size: 13px; letter-spacing: .36em; line-height: 12px;">
+                              PRIVACY POLICY
                             </a>
                           </td>
                         </tr>
@@ -267,8 +258,8 @@
                           For a limited time only.
                         </strong>
                          Offer valid ONLINE ONLY at
-                        <a href="https://www.guessfactory.com/en" style="color:#333333;">
-                          GUESSFACTORY.com
+                        <a href="http://www.guess.ca/en/" style="color:#333333;">
+                          GUESS.ca
                         </a>
                       . Must use promo code GCA125 at checkout and select "Standard 5-7 Business Days" on the Shipping Page to receive this offer. Shipping offer valid
                       <span class="ioslink333">
@@ -279,8 +270,8 @@
                           GUESS.com
                         </span>
                         . For details on free in-store returns, visit
-                        <a href="https://www.guessfactory.com/en/customercare/returns/" style="color:#333333;">
-                          GUESSfactory.com/en/customercare/returns/
+                        <a href="http://www.guess.ca/customercare/returns" style="color:#333333;">
+                          GUESS.ca/customercare/returns
                         </a>
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
                     </p>
@@ -290,12 +281,12 @@
                         For a limited time only.
                       </strong>
                       Duty discounted offer is valid online only at
-                      <a href="https://www.guessfactory.com/en" style="color:#333333;">
-                        GUESSFACTORY.com
+                      <a href="http://www.guess.ca/en/" style="color:#333333;">
+                        GUESS.ca
                       </a>
                        for orders placed between February 4, 2014 at 12:01 a.m. PT and December 31, 2015 at 11:59 p.m. PT. Duty discount will be reflected on the Payment Page. Offer applies to duties only and does not apply to taxes. Taxes are calculated based on the merchandise subtotal and duties and varies by shipping destination. Although duties are not charged to your order, taxes on the duties will still be charged. Offer not valid at
-                       <a href="https://www.guessfactory.com/en" style="color:#333333;">
-                        GUESS FACTORY
+                       <a href="http://www.guess.ca/en/" style="color:#333333;">
+                        GUESS
                       </a>
                        stores in the United States or Canada or at
                        <span class="ioslink333">
@@ -306,11 +297,11 @@
                     <p style="color: #666666; font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
                       To ensure you always receive emails from GUESS, including the latest styles and exclusive events, add
                       <a href="mailto:noreply@admarketing.guess.ca" target="_self" alt="Disclaimer" _label="Disclaimer" style="color:#333333;text-decoration:underline;">
-                        noreply@admarketing.guessfactory.com
+                        noreply@admarketing.guess.ca
                       </a> to your address book.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
-                      <a href="https://www.guessfactory.com/en/Subscription/Unsubscribe" style="color:#666666; text-decoration:underline;">
+                      <a href="https://guess.ca/en/Subscription/Unsubscribe" style="color:#666666; text-decoration:underline;">
                         <strong>
                           Unsubscribe
                         </strong>
