--- a/GbyGuess/new-header-footer-gbyguess-US.html
+++ b/GbyGuess/new-header-footer-gbyguess-US.html
@@ -3,53 +3,53 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width"/>
- <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,300,600' rel='stylesheet' type='text/css'>
- <style type='text/css'>
-  .gmailfix {
-    display:none;
-    display:none!important;
-  }
-  .ioslink999 a {
-    text-decoration: underline;
-    color: #999999;
-  }
-  .ioslink333 a {
-    text-decoration: none;
-    color: #333333;
-  }
-  a img 
-  {
-    border: 0 none;
-  }
-  @media only screen and (max-width: 600px){
-    .preheader {
-      font-size: 1.5vw !important;
-    }
-    .fss {
-      font-size: 2.3vw !important;
-    }
-    .buttons {
-      font-size: 3.8vw !important;
-    }
-    .corporate {
-      font-size: 2.2vw !important;
-    }
-  }
-    @media only screen and (max-width: 380px){
-    .preheader {
-      font-size: 1.5vw !important;
-    }
-    .fss {
-      font-size: 3.6vw !important;
-    }
-    .buttons {
-      font-size: 4.7vw !important;
-    }
-    .corporate {
-      font-size: 2.2vw !important;
-    }
-  }
- </style>
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,300,600' rel='stylesheet' type='text/css'>
+    <style type='text/css'>
+      .gmailfix {
+        display:none;
+        display:none!important;
+      }
+      .ioslink999 a {
+        text-decoration: underline;
+        color: #999999;
+      }
+      .ioslink333 a {
+        text-decoration: none;
+        color: #333333;
+      }
+      a img
+      {
+        border: 0 none;
+      }
+      @media only screen and (max-width: 600px){
+        .preheader {
+          font-size: 1.5vw !important;
+        }
+        .fss {
+          font-size: 2.3vw !important;
+        }
+        .buttons {
+          font-size: 3.8vw !important;
+        }
+        .corporate {
+          font-size: 2.2vw !important;
+        }
+      }
+        @media only screen and (max-width: 380px){
+        .preheader {
+          font-size: 1.5vw !important;
+        }
+        .fss {
+          font-size: 3.6vw !important;
+        }
+        .buttons {
+          font-size: 4.7vw !important;
+        }
+        .corporate {
+          font-size: 2.2vw !important;
+        }
+      }
+    </style>
   </head>
   <body style="max-width: 582px; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
     <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
@@ -97,7 +97,7 @@
                       <tbody>
                         <tr>
                           <td>
-                            <a href="http://www.guess.ca/en/">
+                            <a href="https://www.gbyguess.com/en/">
                               <img src="http://content.guess.com/GuessUS/GbyGuess/HeadersFooters/2015/October/10.22/Gby_Email_LOGO.png" width="100%">
                             </a>
                           </td>
@@ -109,7 +109,7 @@
                       <tbody>
                         <tr>
                           <td style="padding-top:11px; padding-bottom:11px; text-align: center;">
-                            <a class= "fss" href="http://www.guess.ca/en/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
+                            <a class= "fss" href="https://www.gbyguess.com/en/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
                               <strong>FREE SHIPPING*</strong> ON ORDERS $XX+
                             </a>
                           </td>
@@ -132,7 +132,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="http://www.guess.ca/en/Catalog/Browse/women/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
+                            <a class="buttons" href="https://www.gbyguess.com/en/Catalog/Browse/whats-new/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
                               NEW ARRIVALS
                             </a>
                           </td>
@@ -144,7 +144,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="http://www.guess.ca/en/Catalog/Browse/?f_on_sale=Y" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
+                            <a class="buttons" href="https://www.gbyguess.com/en/Catalog/Browse/?f_on_sale=Y" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
                               SALE
                             </a>
                           </td>
@@ -156,7 +156,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="http://www.guess.ca/en/StoreLocator/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
+                            <a class="buttons" href="https://www.gbyguess.com/en/StoreLocator/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
                               FIND A STORE
                             </a>
                           </td>
@@ -168,7 +168,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guess.ca/en/Account/Register?IsLoyalty=True" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                            <a class="buttons" href="https://www.gbyguess.com/en/Account/RegisterLoyalty/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -212,7 +212,7 @@
                             </a>
                           </td>
                           <td>
-                            <a href="https://www.youtube.com/channel/UCWLeM4lXOBC38lci-TDKL1g">
+                            <a href="https://www.youtube.com/user/GUESSincTV">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_youtube_15900.png">
                             </a>
                           </td>
@@ -229,17 +229,17 @@
                       <tbody>
                         <tr>
                           <td style="color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; width: 33%; text-align: right; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a href="https://www.gbyguess.com/en/privacypolicy/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               PRIVACY POLICY
                             </a>
                           </td>
                           <td style="color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; width: 33%; text-align: center; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a href="https://www.gbyguess.com/en/gbyguessapp/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               GET THE APP
                             </a>
                           </td>
                           <td style="width: 33%; font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: left; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a href="https://www.gbyguess.com/en/CustomerCare/ContactUs/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               CONTACT US
                             </a>
                           </td>
@@ -262,8 +262,8 @@
                           For a limited time only.
                         </strong>
                          Offer valid ONLINE ONLY at
-                        <a href="http://www.guess.ca/en/" style="color:#333333;">
-                          GUESS.ca
+                        <a href="https://www.gbyguess.com/en/" style="color:#333333;">
+                          GbyGuess.com
                         </a>
                       . Must use promo code GCA125 at checkout and select "Standard 5-7 Business Days" on the Shipping Page to receive this offer. Shipping offer valid
                       <span class="ioslink333">
@@ -274,8 +274,8 @@
                           GUESS.com
                         </span>
                         . For details on free in-store returns, visit
-                        <a href="http://www.guess.ca/customercare/returns" style="color:#333333;">
-                          GUESS.ca/customercare/returns
+                        <a href="https://www.gbyguess.com/en/CustomerCare/Returns/" style="color:#333333;">
+                          GbyGuess.com/CustomerCare/Returns/
                         </a>
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
                     </p>
@@ -305,7 +305,7 @@
                       </a> to your address book.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
-                      <a href="https://guess.ca/en/Subscription/Unsubscribe" style="color:#666666; text-decoration:underline;">
+                      <a href="https://www.gbyguess.com/en/subscription/unsubscribe" style="color:#666666; text-decoration:underline;">
                         <strong>
                           Unsubscribe
                         </strong>
